Update style.less with some boilerplate

--- a/css/style.less
+++ b/css/style.less
@@ -1,8 +1,13 @@
-/* Brand colors */
+// Brand colors
 @brand_primary: #528a36;
 @brand_accent: #f6821f;
 @bg-color: #dec9a3;
-/* Typography */
+// Typography
 @heading: "Museo Slab", serif;
 @subheading: "Museo", sans-serif;
 @body: "Open sans", "Helvetica Neue", Arial, sans-serif;
+//Layout
+
+//Media queries
+
+//Feature queries
