Add main typography styles

--- a/css/style.less
+++ b/css/style.less
@@ -6,6 +6,19 @@
 @heading: "Museo Slab", serif;
 @subheading: "Museo", sans-serif;
 @body: "Open sans", "Helvetica Neue", Arial, sans-serif;
+
+h1 {
+  font-family: @heading;
+}
+
+h2, h3 {
+  font-family: @subheading;
+}
+
+body {
+  font-family: @body;
+}
+
 //Layout
 
 //Media queries
