--- a/css/style.less
+++ b/css/style.less
@@ -9,14 +9,17 @@
 
 h1 {
   font-family: @heading;
+  color: @brand_primary;
 }
 
 h2, h3 {
   font-family: @subheading;
+  color: @brand_accent;
 }
 
 body {
   font-family: @body;
+  background-color: @bg-color;
 }
 
 //Layout
